Add tic-tac-toe game

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ReactJS Games",
+  "name": "Games created using ReactJS by Blaarkies.com",
   "icons": [
     {
       "src": "favicon.ico",
